fixing project spacing for mobile

--- a/src/components/projects.module.css
+++ b/src/components/projects.module.css
@@ -143,6 +143,7 @@
 
 .project_card {
    padding: 20px 0;
+   height: auto;
 }
 
 .project_title {
@@ -210,13 +211,13 @@
     object-position: center;
     display: block;
     width: 100%;
-    height: 250px;
+    height: 150px;
     border-radius: 10px 10px 0 0;
 }
 
 .project_des {
     display: block;
-    padding: 15px 0;
+    padding: 0;
     border-radius: 0 0 8px 8px;
     background-color: var(--color-accent);
 }
@@ -237,7 +238,9 @@
     color: rgb(168, 168, 168);
 } 
 
-
+.des_title {
+    margin-top: 20px;
+}
 
 
 
